crates/sound/src/snapshots/telmo_sound__ui__tests__route_linux.snap
---
source: crates/sound/src/ui.rs
expression: "render(&app(mock::linux(), \"\\t\\tjo\"))"
---
 Sound

╭─ Output ───────────────────────────────────────────────────────────────────────────────╮
│   ● Built-in Audio            ━━━━━━━━━━━━━━━━━━━━━─────────    70%                    │
│     AirPods Pro               ━━━━━━━━━━━━━━────────────────    45%                    │
│     Mac mini speakers         ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━   100%                    │
│     LG UltraFine  ╭─ Play Zen Browser on ──────────────────────────╮                   │
╰───────────────────│                                                │───────────────────╯
╭─ Input ───────────│     Built-in Audio                             │───────────────────╮
│   ● Blue Snowball │ ▌ ● AirPods Pro                                │                   │
╰───────────────────│     Mac mini speakers                          │───────────────────╯
╭─ Playing ─────────│     LG UltraFine                               │───────────────────╮
│     Spotify       │                                                │                   │
│ ▌   Zen Browser   │  ↵ move   esc cancel                           │ → AirPods Pro     │
│     Discord       │                                                │                   │
╰───────────────────╰────────────────────────────────────────────────╯───────────────────╯



▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁

 ←→ volume  m mute  o output  f song  ? more  esc close
