crates/sound/src/snapshots/telmo_sound__ui__tests__song_listening_desktop_linux.snap
---
source: crates/sound/src/ui.rs
expression: render(&app)
---
 Sound

╭─ Output ───────────────────────────────────────────────────────────────────────────────╮
│ ▌ ● Bui╭─ What's playing? ────────────────────────────────────────────────────╮        │
│     Air│                                                                      │        │
│     Mac│  Listening to desktop audio                                          │        │
│     LG │                                                                      │        │
╰────────│  ━━━━━━━━━━━━━━━━━───────────────────────  5 / 12 s                  │────────╯
╭─ Input │  ━━━━━━━━━━━━━━━━━━━━────────────────────  level                     │────────╮
│   ● Blu│                                                                      │        │
╰────────│                                                                      │────────╯
╭─ Playin│                                                                      │────────╮
│     Spo│                                                                      │        │
│     Zen│                                                                      │Pro     │
│     Dis│                                                                      │        │
╰────────│                                                                      │────────╯
         │                                                                      │
         │  m use microphone   esc cancel                                       │
         ╰──────────────────────────────────────────────────────────────────────╯
▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁

 ←→ volume  m mute  ↵ set default  f song  ? more  esc close
