crates/sound/src/snapshots/telmo_sound__ui__tests__song_listening_mic_mac.snap
---
source: crates/sound/src/ui.rs
expression: render(&app)
---
 Sound

╭─ Output ───────────────────────────────────────────────────────────────────────────────╮
│ ▌ ● Mac╭─ What's playing? ────────────────────────────────────────────────────╮        │
│     Air│                                                                      │        │
│     LG │  Listening through the microphone                                    │        │
╰────────│                                                                      │────────╯
╭─ Input │  ━━━━━━━━━━━━━━━━━━━━━━━━━━━─────────────  8 / 12 s                  │────────╮
│   ● Mac│  ━━━━━━━━━━━━━━━━━━━━────────────────────  level                     │        │
│     Air│                                                                      │        │
╰────────│                                                                      │────────╯
         │                                                                      │
         │                                                                      │
         │                                                                      │
         │                                                                      │
         │                                                                      │
         │                                                                      │
         │  m use desktop audio   esc cancel                                    │
         ╰──────────────────────────────────────────────────────────────────────╯
▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁

 ←→ volume  m mute  ↵ set default  f song  ? more  esc close
