crates/sound/src/snapshots/telmo_sound__ui__tests__song_mic_denied_mac.snap
---
source: crates/sound/src/ui.rs
expression: render(&app)
---
 Sound

╭─ Output ────────────────────────────────────────────────────────────────────────── EQ ─╮
│ ▌ ● Mac╭─ What's playing? ────────────────────────────────────────────────────╮kers +  │
│     Ear│                                                                      │  Flat  │
│     Ext│  Telmo isn't allowed to use the microphone. Turn it on in System     │b-bass  │
│     LG │  Settings > Privacy & Security > Microphone.                         │  Flat  │
╰────────│                                                                      │────────╯
╭─ Input │                                                                      │────────╮
│   ● Mac│                                                                      │        │
│     Ear│                                                                      │        │
╰────────│                                                                      │────────╯
         │                                                                      │
         │                                                                      │
         │                                                                      │
         │                                                                      │
         │                                                                      │
         │  r retry   m use desktop audio   esc close                           │
         ╰──────────────────────────────────────────────────────────────────────╯
▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁

 ←→ volume  m mute  e next preset  E EQ  f song  ? more  esc close
