crates/sound/src/snapshots/telmo_sound__ui__tests__song_result_mac.snap
---
source: crates/sound/src/ui.rs
expression: render(&app)
---
 Sound

╭─ Output ────────────────────────────────────────────────────────────────────────── EQ ─╮
│ ▌ ● Mac╭─ What's playing? ────────────────────────────────────────────────────╮kers +  │
│     Ear│                                                                      │  Flat  │
│     Ext│  ╭──────────╮                                                        │b-bass  │
│     LG │  │          │  Sneaky Snitch                                         │  Flat  │
╰────────│  │          │  Kevin MacLeod                                         │────────╯
╭─ Input │  │    ♪     │  YouTube Audio Library · 2012                          │────────╮
│   ● Mac│  │          │                                                        │        │
│     Ear│  ╰──────────╯                                                        │        │
╰────────│                                                                      │────────╯
         │  Recent                                                              │
         │  Windowlicker — Aphex Twin                                           │
         │  Teardrop — Massive Attack                                           │
         │  Open Eye Signal — Jon Hopkins                                       │
         │                                                                      │
         │  c copy   o Shazam   a Apple Music   s Spotify   r again   esc close │
         ╰──────────────────────────────────────────────────────────────────────╯
▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁

 ←→ volume  m mute  e next preset  E EQ  f song  ? more  esc close
