crates/sound/src/snapshots/telmo_sound__ui__tests__song_result_with_cover_mac.snap
---
source: crates/sound/src/ui.rs
expression: render(&app)
---
 Sound

╭─ Output ───────────────────────────────────────────────────────────────────────────────╮
│ ▌ ● Mac╭─ What's playing? ────────────────────────────────────────────────────╮        │
│     Air│                                                                      │        │
│     LG │  ▀ ▄▀ ▄▀ ▄▀ ▄                                                        │        │
╰────────│  ▄ ▀▄ ▀▄ ▀▄ ▀  Sneaky Snitch                                         │────────╯
╭─ Input │  ▀ ▄▀ ▄▀ ▄▀ ▄  Kevin MacLeod                                         │────────╮
│   ● Mac│  ▀ ▄▀ ▄▀ ▄▀ ▄  YouTube Audio Library · 2012                          │        │
│     Air│  ▄ ▀▄ ▀▄ ▀▄ ▀                                                        │        │
╰────────│  ▀ ▄▀ ▄▀ ▄▀ ▄                                                        │────────╯
         │                                                                      │
         │  Recent                                                              │
         │  Windowlicker — Aphex Twin                                           │
         │  Teardrop — Massive Attack                                           │
         │  Open Eye Signal — Jon Hopkins                                       │
         │                                                                      │
         │  c copy   o Shazam   a Apple Music   s Spotify   r again   esc close │
         ╰──────────────────────────────────────────────────────────────────────╯
▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁

 ←→ volume  m mute  ↵ set default  f song  ? more  esc close
