crates/sound/src/snapshots/telmo_sound__ui__tests__visualizer_blocked_mac.snap
---
source: crates/sound/src/ui.rs
expression: render(&app)
---
 Sound

╭─ Output ───────────────────────────────────────────────────────────────────────────────╮
│   ● MacBook Pro Speakers      ━━━━━━━━━━━━━━━━━━━───────────    62%                    │
│ ▌   AirPods Pro               ━━━━━━━━━━━━──────────────────    40%                    │
│     LG UltraFine              fixed volume                                             │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Input ────────────────────────────────────────────────────────────────────────────────╮
│   ● MacBook Pro Microphone    ━━━━━━━━━━━━━━━━━━━━━━━───────    75%                    │
│     AirPods Pro               ━━━━━━━━━━━━━━━───────────────    50%                    │
╰────────────────────────────────────────────────────────────────────────────────────────╯







     Allow System Audio Recording for Telmo in System Settings to see the visualizer.
▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁

 ←→ volume  m mute  ↵ set default  ? more  esc close
