crates/sound/src/snapshots/telmo_sound__ui__tests__visualizer_playing_linux.snap
---
source: crates/sound/src/ui.rs
expression: render(&app)
---
 Sound

╭─ Output ───────────────────────────────────────────────────────────────────────────────╮
│   ● Built-in Audio            ━━━━━━━━━━━━━━━━━━━━━─────────    70%                    │
│ ▌   AirPods Pro               ━━━━━━━━━━━━━━────────────────    45%                    │
│     Mac mini speakers         ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━   100%                    │
│     LG UltraFine              ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━   100%                    │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Input ────────────────────────────────────────────────────────────────────────────────╮
│   ● Blue Snowball             ━━━━━━━━━━━━━━━━━━━━━━━━──────    80%                    │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Playing ──────────────────────────────────────────────────────────────────────────────╮
│     Spotify                   ━━━━━━━━━━━━━━━━━━━━━━━━──────    80%                    │
│     Zen Browser               ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━   100%  → AirPods Pro     │
│     Discord                   ━━━━━━━━━━━━━━━━━━━━──────────  muted                    │
╰────────────────────────────────────────────────────────────────────────────────────────╯
  ▔ ▂ ▃ ▔                               ▔   ▔
  ▆ █ █ █ ▄ ▔       ▔ ▔ ▔           ▔ ▔ ▃ ▅ ▄ ▁ ▔                         ▔   ▔   ▔
█ █ █ █ █ █ ▇ ▄ ▄ ▅ ▆ ▇ ▆ ▄ ▔   ▔ ▔ ▃ █ █ █ █ █ ▅ ▁ ▔ ▔ ▔ ▁ ▂ ▂ ▔ ▔   ▔ ▔ ▂ ▄ ▆ ▆ ▄ ▂ ▔
█ █ █ █ █ █ █ █ █ █ █ █ █ █ █ ▆ ▅ ▇ █ █ █ █ █ █ █ █ ▇ ▇ █ █ █ █ █ ▇ ▆ ▆ ▇ █ █ █ █ █ █ ▇ ▅

 ←→ volume  m mute  ↵ set default  f song  ? more  esc close
